--- a/project/package.json
+++ b/project/package.json
@@ -70,6 +70,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/faker": "^5.5.8",
     "@types/jest": "^29.1.2",
+    "@types/leaflet": "1.9.2",
     "@types/node": "^16.11.7",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
@@ -77,7 +78,6 @@
     "axios-mock-adapter": "^1.21.2",
     "eslint-config-htmlacademy": "^8.0.0",
     "faker": "^5.5.3",
-    "typescript": "^4.8.4",
-    "@types/leaflet": "1.9.2"
+    "typescript": "^4.8.4"
   }
 }
