--- a/project/package.json
+++ b/project/package.json
@@ -63,6 +63,7 @@
     ]
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@jedmao/redux-mock-store": "^3.0.5",
     "@redux-devtools/extension": "^3.2.3",
     "@testing-library/jest-dom": "^5.16.5",
@@ -77,7 +78,6 @@
     "@types/react-redux": "^7.1.24",
     "axios-mock-adapter": "^1.21.4",
     "eslint-config-htmlacademy": "^8.0.0",
-    "faker": "^5.5.3",
     "typescript": "^4.8.4"
   }
 }
